# common-mark-language-server

./: .gitlint  .lvimrc  .pre-commit-config.yaml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: check.yml  clippy.yml  lints.yml  stable.yml
samples/: test.md
src/: ast.rs  lib.rs  lsp.rs  main.rs
src/snapshots/: common_mark_language_server__ast__tests__parse_repeated_anchors.snap  common_mark_language_server__ast__tests__parse_simple.snap  common_mark_language_server__ast__tests__query.snap  common_mark_language_server__lsp__tests__completion-2.snap  common_mark_language_server__lsp__tests__completion-3.snap  common_mark_language_server__lsp__tests__completion.snap  common_mark_language_server__lsp__tests__document_symbol_request.snap  common_mark_language_server__lsp__tests__folding_range_request.snap  common_mark_language_server__lsp__tests__gotodefinition-2.snap  common_mark_language_server__lsp__tests__gotodefinition-3.snap  common_mark_language_server__lsp__tests__gotodefinition.snap  common_mark_language_server__lsp__tests__hover-2.snap  common_mark_language_server__lsp__tests__hover.snap  common_mark_language_server__lsp__tests__load_file_error.snap  common_mark_language_server__lsp__tests__references-2.snap  common_mark_language_server__lsp__tests__references-3.snap  common_mark_language_server__lsp__tests__references-4.snap  common_mark_language_server__lsp__tests__references-5.snap  common_mark_language_server__lsp__tests__references.snap  common_mark_language_server__lsp__tests__rename-2.snap  common_mark_language_server__lsp__tests__rename-3.snap  common_mark_language_server__lsp__tests__rename-4.snap  common_mark_language_server__lsp__tests__rename.snap  common_mark_language_server__lsp__tests__workspace_symbol_request-2.snap  common_mark_language_server__lsp__tests__workspace_symbol_request.snap
