[package]
name = "common-mark-language-server"
version = "0.2.0"
authors = ["Benjamin Bannier <bbannier@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.7.8"
log = "0.4.22"
lsp-types = "0.95.1"
flexi_logger = { version = "0.29.8", default-features = false }
serde_json = "1.0.134"
serde = "1.0.217"
pulldown-cmark = "0.11.0"
intervaltree = "0.2.7"
url = "2.5.4"
jod-thread = "0.1.2"
crossbeam-channel = "0.5.14"
static_assertions = "1.1.0"
regex = "1.11.1"
anyhow = "1.0.95"
salsa = "0.16.1"
ouroboros = "0.18.5"
clap = { version = "4.5.23", features = ["derive"] }
insta = "1.41.1"

[dev-dependencies]
textwrap = "0.16.1"
