[package]
name = "common-mark-language-server"
version = "0.2.0"
authors = ["Benjamin Bannier <bbannier@gmail.com>"]
edition = "2024"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.7.8"
log = "0.4.27"
lsp-types = "0.95.1"
flexi_logger = { version = "0.31.2", default-features = false }
serde_json = "1.0.141"
serde = "1.0.219"
pulldown-cmark = "0.11.3"
intervaltree = "0.2.7"
url = "2.5.4"
jod-thread = "1.0.0"
crossbeam-channel = "0.5.15"
static_assertions = "1.1.0"
regex = "1.11.1"
anyhow = "1.0.98"
salsa = "0.23.0"
ouroboros = "0.18.5"
clap = { version = "4.5.42", features = ["derive"] }
insta = "1.43.1"

[dev-dependencies]
textwrap = "0.16.2"

[lints.clippy]
all = { level = "deny", priority = -2 }
pedantic = { level = "deny", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
